--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <p>
         I am from Washington, DC 
         <img id="dc" src="./assets/dc.png">
-        &mdash; which is not as square of a city as the map suggests! That said, the white house could use a serious shake up.
+        &mdash; a way less square city than the map suggests!
         </p>
         <p>
           I relocated to London in 2013, by way of Boston for my undergraduate degree, to complete a Masters at 
