update contact text

--- a/contact/index.html
+++ b/contact/index.html
@@ -45,7 +45,7 @@
         <h3>And while you’re here...</h3>
         <p>
           <b>
-          I was recently asked to explain my PhD research using one-syllable words to take a minor stand against Academia’s endless -isms, -ists and -tions. 
+          I was recently asked to explain my PhD research using one-syllable words. 
           </b>
           <br>
           <b>
@@ -56,7 +56,7 @@
           I look at how folks move from their home place (point A) to a new place (point B) for work, basic needs, or to flee war. I study the risks they face, such as forms of abuse, threats, lies, and so on, but also the harms that they face, such as lost wage, poor health, or death. My work asks: Why and how do some folks face these risks and these harms? Who does these acts that cause harm? What is the cause of the harm? Is there more than one cause? Does more of one cause lead to more harm? Or the link of cause and harm is not a line that trends up? Do more than one cause work at the same time and link in ways that are more than a sum of their parts? And, most key, how can we stop these forms of harm?
         </p>
         <p>
-        <b>I was also asked what a comic of my PhD years would be.</b> 
+        <b>And if my PhD could be summarized in a comic strip...</b> 
         </p>
         <img id="cartoon">
       </section>
