--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <a id="dc" target="_blank" href="https://www.lshtm.ac.uk/">the London School of Hygiene and Tropical Medicine</a> (LSHTM).
           During this time, I was fortunate to find an academic home at the LSHTM <a target="_blank" href="https://www.lshtm.ac.uk/research/centres-projects-groups/gender-violence-health-centre">Gender Violence and Health Centre</a> (GVHC) 
           working with colleageues on applied research to inform prevention of the most prevalent and pervasive forms of violence, exploitation and discrimination.
-          In 2015, I joined the GVHC as a staff researcher and then in 2017 as full time PhD student.
+          In 2015, I joined the GVHC as a staff researcher and then in 2017 transitioned back to full time student to pursue my PhD.
           <b>
             My current research is at the intersection of gender-based violence, migration, public health and complex systems.
           </b>
