--- a/research/index.html
+++ b/research/index.html
@@ -51,10 +51,10 @@
 	  <img src="../assets/emergent-migrations-runs.png">
 	  <figcaption><b>Figure 2.</b> Emergent Migrations ABM (2020), Four model runs.</figcaption>
 	</figure>
-        <h2>PhD Manuscripts under Development</h2>
+        <h2>PhD Manuscripts under development</h2>
         <ul>
           <li>
-            <b>McAlpine A</b>, Kiss, L, Zimmerman C, and Chalabi Z. 
+            <b>McAlpine A</b>, Kiss L, Zimmerman C, and Chalabi Z. 
             <i>Agent-based modeling for migration and modern slavery research: a systematic review. </i>
             Journal of Computational Social Science. 2020. 
             <b>[Accepted, Forthcoming 2020]</b>
