--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </p>
         <p>
           I relocated to London in 2013, by way of Boston for my undergraduate degree, to complete a Masters at 
-          <a id="dc" target="_blank" href="https://www.lshtm.ac.uk/">the London School of Hygiene and Tropical Medicine</a> (LSHTM).
+          <a id="dc" target="_blank" href="https://www.lshtm.ac.uk/">The London School of Hygiene and Tropical Medicine</a> (LSHTM).
           During this time, I was fortunate to find an academic home at the LSHTM <a target="_blank" href="https://www.lshtm.ac.uk/research/centres-projects-groups/gender-violence-health-centre">Gender Violence and Health Centre</a> (GVHC) 
           working with colleageues on applied research to inform prevention of the most prevalent and pervasive forms of violence, exploitation and discrimination.
           In 2015, I joined the GVHC as a staff researcher and then in 2017 transitioned back to full time student to pursue my PhD.
@@ -54,7 +54,7 @@
         <li>2021 PhD Enrichment Student, <a target="_blank" href="https://www.turing.ac.uk/">The Alan Turing Institute</a></li>
         <li>2020 Visiting Scholar, <a target="_blank" href="https://cress.soc.surrey.ac.uk/web/home">Center for Research in Social Simulation</a> (CRESS)</li>
         <li>2020 'Modeling for the Built Environment' Module [audited], <a target="_blank" href="https://www.ucl.ac.uk/bartlett/">The Bartlett, UCL</a></li>
-        <li>2019 Fuzzing Set Qualitative Comparative Analysis, <a target="_blank" href="https://www.methods.manchester.ac.uk/themes/case-studies/fuzzy-set-analysis/">University of Manchester</a></li>
+        <li>2019 Fuzzy Set Qualitative Comparative Analysis, <a target="_blank" href="https://www.methods.manchester.ac.uk/themes/case-studies/fuzzy-set-analysis/">University of Manchester</a></li>
         <li>2019 Burmese Beginners, <a target="_blank" href="https://www.soas.ac.uk/sea/burmese/">School for Oriental and African Studies UoL</a> (SOAS)</li>
         <li>2019 Burmese Beginners Intensive, <a target="_blank" href="http://lukecorbin.org/bamazaga/">Bamagaza Burmese Language Training</a></li>
         <li>2018 Gender-Based Violence Research Methodologies, <a target="_blank" href="https://www.lshtm.ac.uk/study/courses/short-courses/gender-violence">GVHC at LSHTM</a></li>
