--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
           My PhD is being completed in collaboration with <a target="_blank" href="https://freedomfund.org/">The Freedom Fund</a> and funded by the <a target="_blank" href="https://ubel-dtp.ac.uk/">ESRC UBEL DTP</a>.
           In 2021, I will complete the final stages of my PhD as part of the <a target="_blank" href="https://www.turing.ac.uk/">Alan Turing Institute</a>'s PhD Enrichment Scheme.
         </p>
+        <p>
+          View my <a target="_blank" href="./assets/McAlpine_CV_June2020.pdf">CV</a>.
+        </p>
       </section>
       <section>
         <h3>Education</h3>
