--- a/index.html
+++ b/index.html
@@ -2,6 +2,26 @@
 <html>
   <head>
     <meta charset="UTF-8">
+
+    <title>Alys McAlpine</title>
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="Shortcut Icon" href="">
+
+    <meta name="robots" content="index,follow,noodp">
+    <meta name="googlebot" content="index,follow">
+    <meta name="google" content="nositelinkssearchbox">
+
+    <meta name="description" content="Alys McAlpine">
+    <meta name="abstract" content="Alys McAlpine">
+    <meta name="summary" content="Alys McAlpine">
+    <meta name="subject" content="Alys McAlpine">
+    <meta name="topic" content="Alys McAlpine">
+
+    <meta name="coverage" content="Worldwide">
+    <meta name="referrer" content="never">
+    <meta name="format-detection" content="telephone=no">
+
     <script type="text/javascript" language="javascript" src="./js/lib/d3.min.js"></script>
     <script type="text/javascript" language="javascript" src="./js/lib/p5.min.js"></script>
     <link   type="text/css" rel="stylesheet" href="./css/style.css">
