adds jocc  citation

--- a/research/index.html
+++ b/research/index.html
@@ -74,9 +74,9 @@
         <ul>
           <li>
             <b>McAlpine A</b>, Kiss L, Zimmerman C, and Chalabi Z. 
-            <i>Agent-based modeling for migration and modern slavery research: a systematic review. </i>
+            <b><i><a target="_blank" href="https://link.springer.com/article/10.1007/s42001-020-00076-7">Agent-based modeling for migration and modern slavery research: a systematic review</a></i></b>.
             Journal of Computational Social Science. 2020. 
-            <b>[Accepted, Forthcoming 2020]</b>
+            <a target="_blank" href="https://doi.org/10.1007/s42001-020-00076-7">https://doi.org/10.1007/s42001-020-00076-7</a>
           </li>
           <li>
             <b>McAlpine A</b>, Demarest L, Zimmerman C, and Kiss L. 
