--- a/contact/index.html
+++ b/contact/index.html
@@ -41,6 +41,16 @@
       }
     </style>
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-79452606-5"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-79452606-5');
+    </script>
+
   </head>
   <body>
     <header>
