--- a/research/index.html
+++ b/research/index.html
@@ -24,6 +24,18 @@
     <script type="text/javascript" language="javascript" src="../js/lib/d3.min.js"></script>
     <script type="text/javascript" language="javascript" src="../js/lib/p5.min.js"></script>
     <link   type="text/css" rel="stylesheet" href="../css/style.css">
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-79452606-5"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-79452606-5');
+    </script>
+
+
   </head>
   <body>
     <header>
