--- a/contact/index.html
+++ b/contact/index.html
@@ -26,16 +26,16 @@
     <link   type="text/css" rel="stylesheet" href="../css/style.css">
     <style>
       img#profile{
-        clip-path:circle(44% at 55%);
-        filter:grayscale(1) brightness(1);
+        clip-path:circle(44% at 50%);
+        /*filter:grayscale(1) brightness(1);*/
         width:100%;
         margin:0;
-        margin-left:-23px;
+        margin-left:-23px;	
         margin-bottom:-50px;
       }
       @media screen and (min-device-width: 900px) {
         img#profile{
-          clip-path:circle(39% at 53%);
+          clip-path:circle(39% at 50%);
           width:200px;
         }
       }
