--- a/research/mythmapin/index.html
+++ b/research/mythmapin/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
 
     <title>Alys McAlpine</title>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -21,8 +21,6 @@
     <meta name="referrer" content="never">
     <meta name="format-detection" content="telephone=no">
 
-    <link   type="text/css" rel="stylesheet" href="../../css/style.css">
-
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-79452606-5"></script>
     <script>
@@ -32,24 +30,72 @@
 
       gtag('config', 'UA-79452606-5');
     </script>
-  </head>
+
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <!-- libraries -->
+    <script src="./js/lib/p5.js"></script>
+     <!-- Environment -->
+    <script src="./js/environment.js"></script>
+    <script src="./js/agency.js"></script>
+    <script src="./js/document.js"></script>
+    <!-- Employer -->
+    <script src="./js/employer.js"></script>
+    <!-- Intermediary -->
+    <script src="./js/offer.js"></script>
+    <script src="./js/intermediary.js"></script>
+    <script src="./js/intermediary/smuggler.js"></script>
+    <script src="./js/intermediary/myanmarDocumentBroker.js"></script>
+    <script src="./js/intermediary/thailandDocumentBroker.js"></script>
+    <script src="./js/intermediary/recruiter.js"></script>
+    <script src="./js/intermediary/facilitator.js"></script>
+    <!-- Migrant -->
+    <script src="./js/family.js"></script>
+    <script src="./js/migrant.js"></script>
+    <script src="./js/migrant/migration.js"></script>
+    <script src="./js/migrant/plan.js"></script>
+    <!-- ABM -->
+    <script src="./js/model.js"></script> </head>
   <body>
-    <header>
-      <nav>
-      <a href="../..">about</a>
-      <a href=".." class="current">research</a>
-      <a href="../../contact/">contact</a>
-      </nav>
-    </header>
     <main>
-      <section>
-        <h2>Research</h2>
-      </section>
+      <h2 style="font-size:4em;text-align:center;width:100%;">MyTh MaP-IN</h2>
+      <h2 style="margin:0 auto;padding-top:0;">
+        <span>Myanmar</span>
+        <span>Thailand</span>
+      </h2>
+      <div id="holder" style="display:block;width:4125px;margin: 0 auto;">
+        <div id="abm-accepted-offers"></div>
+        <div id="abm"></div>
+        <div id="abm-pathway-precarity"></div>
+      <div id="abm-data"></div>
+      <img id="legend" src="./assets/legend.png"></img>
+      <div id="abm-controls">
+        <div id="checkboxes"></div>
+        <div id="radios"></div>
+        <button id="fullscreen">Fullscreen</button>
+        <button id="start">Start</button>
+        <button id="restart">New Seed</button>
+        <button id="export">Export Data</button>
+      </div>
+      <p style="text-align: center;font-size:3em;margin-bottom:5em;"><a target="_blank" href="./assets/odd.pdf">MyTh MaP-IN ODD+2D</a></p>
+      <p style="text-align: center;font-size:3em;">MyTh MaP-IN UML</p>
+      <a href="./assets/UML.png" target="_blank">
+        <img id="uml" src="./assets/UML.png"></img>
+      </a>
+      <p style="text-align: center;font-size:3em;">MyTh MaP-IN SCHEMATIC</p>
+      <a href="./assets/schematic.jpg" target="_blank">
+        <img id="schematic" src="./assets/schematic.jpg"></img>
+      </a>
+      <!-- <svg width="780" height="1080"></svg> -->
+      <!-- <div id="populationDashboard"></div> -->
     </main>
-    <footer>
-      <p>
-       Alys McAlpine &copy; 2021 
-      </p>
-    </footer>
+
+    <!-- <script src="./js/sociocentric.js"></script> -->
+    <!-- <script src="./js/populationDashboard.js"></script> -->
+    <!-- <script src="./js/verification-analysis.js"></script> -->
+    <!-- <script src="./js/scenario-analysis.js"></script> -->
+    <script src="./js/migrantsDashboard.js"></script>
+    <script src="./js/acceptedOffersDashboard.js"></script>
+    <script src="./js/pathwaysDashboard.js"></script>
   </body>
 </html>
+
