--- a/index.html
+++ b/index.html
@@ -70,14 +70,14 @@
           working with colleageues on applied research to inform prevention of the most prevalent and pervasive forms of violence, exploitation and discrimination.
           In 2015, I joined the GVHC as a staff researcher and then in 2017 transitioned back to full time student to pursue my PhD.
           <b>
-            My current research is at the intersection of gender-based violence, migration, public health and complex systems.
+            My current research is at the intersection of violence, labour exploitation, migration, gender, public health and complex systems.
           </b>
         </p>
         <p>
           I am supervised by <a target="_blank" href="https://www.lshtm.ac.uk/aboutus/people/zimmerman.cathy">Professor Cathy Zimmernam</a> and <a target="_blank" href="https://www.researchgate.net/profile/Ligia_Kiss">Dr Ligia Kiss</a>. 
           I am also advised by <a target="_blank" href="https://www.researchgate.net/scientific-contributions/39772034_Zaid_Chalabi">Honorary Professor Zaid Chalabi</a> on the methods of Agent-Based Modeling. 
           My PhD is being completed in collaboration with <a target="_blank" href="https://freedomfund.org/">The Freedom Fund</a> and funded by the <a target="_blank" href="https://ubel-dtp.ac.uk/">ESRC UBEL DTP</a>.
-          In 2021, I will complete the final stages of my PhD as part of the <a target="_blank" href="https://www.turing.ac.uk/">Alan Turing Institute</a>'s PhD Enrichment Scheme.
+          In 2021, I completed the final stages of my PhD as part of the <a target="_blank" href="https://www.turing.ac.uk/">Alan Turing Institute</a>'s PhD Enrichment Scheme.
         </p>
         <p>
           View my <a target="_blank" href="./assets/McAlpine_CV_2021.pdf">CV</a>.
@@ -86,7 +86,7 @@
       <section>
         <h3>Education</h3>
          <ul>
-           <li>2021 <b>PhD</b> Public Health and Policy, <a target="_blank" href="https://www.lshtm.ac.uk/">LSHTM</a></li>
+           <li>2021 <b>PhD</b> Public Health and Policy, <a target="_blank" href="https://www.lshtm.ac.uk/">LSHTM</a> (completion July 2021)</li>
            <li>2014 <b>MSc</b> Reproductive and Sexual Health Research, <a target="_blank" href="https://www.lshtm.ac.uk/">LSHTM</a></li>
            <li>2013 <b>BA</b> Nonprofit Business Administration, <a target="_blank" href="https://www.bu.edu/">Boston University</a></li>
         </ul>
