update education and research dates

--- a/contact/index.html
+++ b/contact/index.html
@@ -66,7 +66,7 @@
         <h2>Contact</h2>
         <img id="profile" src="../assets/alys_mcalpine.jpg">      
         <p>
-        If you have any questions about my past, current or future work, please drop me a line to the email below. 
+        If you have any questions about my past, current, or future work, please send an email to the address below. 
         </p>
         <p>
           <b>alys</b> dot <b>mcalpine</b> at <b>lshtm</b> dot <b>ac</b> dot <b>uk</b>
@@ -75,19 +75,10 @@
           <br>
           <br>
           <br>
-        </p>
-        <h3>And while you’re here...</h3>
-        <p>
-          <b>
-          I was recently asked to explain my PhD research using one-syllable words. 
-          </b>
           <br>
-          <b>
-          Here it goes...
-          </b>
-        </p>
-        <p>
-        I look at how folks move from their home place (point A) to a new place (point B) for work, day to day needs, to flee war, and so on. I look at the risks they face, such as forms of force, threats, lies, but also the harms that they face, such as lost wage, poor health, or death. My work asks: Why and how do some folks face these risks and these harms? Who does these acts that cause harm? What is the cause of the harm? Is there more than one cause? Does more of one cause lead to an even rise in harm? Do more than one cause work at the same time and link in ways that are more than a sum of their parts? And, most key, how can we stop these forms of harm?
+          <br>
+          <br>
+          <br>
         </p>
       </section>
     </main>
