--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </p>
         <p>
           I am supervised by <a target="_blank" href="https://www.lshtm.ac.uk/aboutus/people/zimmerman.cathy">Professor Cathy Zimmernam</a> and <a target="_blank" href="https://www.researchgate.net/profile/Ligia_Kiss">Dr Ligia Kiss</a>. 
-          I am also advised by <a target="_blank" href="https://www.researchgate.net/scientific-contributions/39772034_Zaid_Chalabi">Honorary Professor Zaid Chalabi</a> on the methods of Agent-Based Modeling. 
+          I am also advised by <a target="_blank" href="https://www.researchgate.net/scientific-contributions/39772034_Zaid_Chalabi">Honorary Professor Zaid Chalabi</a> on the methods of Agent-Based Modelling. 
           My PhD is being completed in collaboration with <a target="_blank" href="https://freedomfund.org/">The Freedom Fund</a> and funded by the <a target="_blank" href="https://ubel-dtp.ac.uk/">ESRC UBEL DTP</a>.
           In 2021, I completed the final stages of my PhD as part of the <a target="_blank" href="https://www.turing.ac.uk/">Alan Turing Institute</a>'s PhD Enrichment Scheme.
         </p>
