--- a/research/index.html
+++ b/research/index.html
@@ -92,19 +92,18 @@
           </li>
           <li>
             <b>McAlpine A</b>, Demarest L, Zimmerman C, and Kiss L. 
-            <i>Collecting egocentric network data from Myanmar migrant workers: Developing and piloting a participatory mixed-methods visual network survey application.</i> 
-            Migration Methodologies Workshop Special Issue. National University of Singapore. 2020. 
-            <b>[Accepted, Forthcoming 2020]</b>
+            <i>Visual network tools for mixed methods complex systems research: lessons from a study with migrants.</i> 
+            <b>[Submitted for peer-review, June 2021]</b>
           </li>
           <li>
-            <b>McAlpine A</b>, et al. 
-            <i>The networks, interactions and decisions that facilitate low-wage labour migration from Myanmar to Thailand: Qualitative network analysis.</i> 
-            <b>[In Preparation- Forthcoming 2020]</b>
+            <b>McAlpine A</b>, Demarest L, Zimmerman C, and Kiss L. 
+            <i>Labour migration intermediaries, networks, and pathways in the Myanmar-Thailand corridor: a mixed methods social network analysis study.</i> 
+            <b>[Submitted for peer-review, June 2021]</b>
           </li>
           <li>
-            <b>McAlpine A</b>, et al. 
-            <i>Emergent migration pathways to exploitation versus decent work: An agent-based model.</i> 
-            <b>[In Preparation- Forthcoming 2020]</b>
+            <b>McAlpine A</b>, Demarest L, Kiss L, Zimmerman C, Chalabi Z.
+            <i>Migration networks and pathways into precarity in the Myanmar-Thailand corridor: an agent-based model.</i> 
+            <b>[In Preparation for submission July 2021]</b>
           </li>
         </ul>
       </section>
