--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <section>
         <h1 style="pointer-events:none;">Alys McAlpine</h1>
         <p>
-        I am from Washington, DC 
+        I am from Washington, D.C.
         <img id="dc" src="./assets/dc.png">
         &mdash; a way less square city than the map suggests!
         </p>
@@ -67,7 +67,7 @@
           I relocated to London in 2013, by way of Boston for my undergraduate degree, to complete a Masters at 
           <a id="dc" target="_blank" href="https://www.lshtm.ac.uk/">The London School of Hygiene and Tropical Medicine</a> (LSHTM).
           During this time, I was fortunate to find an academic home at the LSHTM <a target="_blank" href="https://www.lshtm.ac.uk/research/centres-projects-groups/gender-violence-health-centre">Gender Violence and Health Centre</a> (GVHC) 
-          working with colleageues on applied research to inform prevention of the most prevalent and pervasive forms of violence, exploitation and discrimination.
+          working with colleageues on applied research to inform prevention of the most prevalent and pervasive forms of violence, exploitation, and discrimination.
           In 2015, I joined the GVHC as a staff researcher and then in 2017 transitioned back to full time student to pursue my PhD.
           <b>
             My current research is at the intersection of violence, labour exploitation, migration, gender, public health and complex systems.
