--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
           You can contact me at alys [dot] mcalpine [at] ucl.ac.uk
         </p>
     </main>
+    <script type="text/javascript" language="javascript" src="./js/header/random-walkers.js"></script>
+    <script type="text/javascript" language="javascript" src="./js/header/sketch-abm.js"></script>
   </body>
-
 </html>
 
